# cookiecutter-snakemake-workflow

./: README.md  cookiecutter.json
{{ cookiecutter.repo_name }}/: .editorconfig  .gitignore  .gitlab-ci.yml  Makefile  README.md  environment.yml  pyproject.toml
{{ cookiecutter.repo_name }}/.test/config/: config.yml  units.tsv
{{ cookiecutter.repo_name }}/config/: config.yml
{{ cookiecutter.repo_name }}/workflow/: Snakefile
{{ cookiecutter.repo_name }}/workflow/rules/: common.smk
